# power-juices

./: .gitignore  README.md  beet.json  pyproject.toml  spyglass.json
.github/workflows/: build.yml
mcpeachpies_power_juices/: pack.mcmeta
mcpeachpies_power_juices/data/mcpeachpies_power_juices/loot_tables/recipes/: apple_juice.json
src/: pack.mcmeta
src/data/minecraft/tags/functions/: load.json
src/data/power_juices/advancements/: pick_up_tipped_arrow.json
src/data/power_juices/functions/: clock.mcfunction  load.mcfunction  pick_up_tipped_arrow.mcfunction  setup.mcfunction
src/data/power_juices/functions/brewing_stand/: lingering.mcfunction  splash.mcfunction
src/data/power_juices/functions/juicer/: check.mcfunction  create.mcfunction  destroy.mcfunction  recipe_check.mcfunction
src/data/power_juices/functions/tipped_arrow/: apple_juice.mcfunction  beer.mcfunction  beetroot_cream.mcfunction  beetroot_juice.mcfunction  cactus_juice.mcfunction  carrot_juice.mcfunction  chorus_juice.mcfunction  concentrated_cactus_juice.mcfunction  glowing_pumpkin_juice.mcfunction  hot_chocolate.mcfunction  magic_mushroom_juice.mcfunction  melon_juice.mcfunction  ocean_juice.mcfunction  popping_chorus_juice.mcfunction  pumpkin_juice.mcfunction  shiny_apple_juice.mcfunction  shiny_carrot_juice.mcfunction  shiny_melon_juice.mcfunction  sparkling_apple_juice.mcfunction
src/data/power_juices/loot_tables/recipes/: apple_juice.json  beer.json  beetroot_cream.json  beetroot_juice.json  cactus_juice.json  carrot_juice.json  chorus_juice.json  concentrated_cactus_juice.json  (+11 more)
(+63 files in other folders)
